[tool.poetry]
name = "twitch-bot"
version = "0.1.0"
description = ""
authors = ["Victor <vcwildm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^1.2.3"
python-dotenv = "^0.17.1"
redis = "^3.5.3"
PyYAML = "^5.4.1"
click = "^8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.15.1"
ipython = "^7.25.0"
isort = "^5.9.3"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
